test/cts/negative/unknown_identifier.wesl
@compute @workgroup_size(1, 1, 1)
fn main(@builtin(global_invocation_id) gid: vec3<u32>) {
  let _ = missing_value + gid.x;
}
